--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,19 +8,23 @@
   --light: #EBF5E8;
   --light-2: #84A37D;
   --dark: #435C48;
+  --dark-2: #364E3B;
+  --special: #84A37D;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: var(--dark);
     --foreground: var(--light);
+    --highlight: var(--light-2);
   }
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     --background: var(--light-2);
-    --foreground: white;
+    --foreground: var(--dark-2);
+    --highlight: var(--light-2);
   }
 }
 
